# ktp-conductor-demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SPRINT_PLAN.md  docker-compose.yml  justfile  pyproject.toml
app/: config.py  limiter.py  main.py
app/geo/: lidar_features.py  vectorise.py
app/ml/: catenary.py  fusion.py  graph_complete.py  model.py  postprocess.py
app/routers/: fuse.py  infer.py  lidar.py  segment.py  vectorise.py
app/static/: app.js  index.html
app/static/examples/: index.json
docs/: MODEL_CARD.md  data_governance.md  design_decisions.md  evaluation.md  evaluation_per_image_canonical.json  evaluation_per_image_random.json  evaluation_per_image_session.json  evaluation_results.md  evaluation_results_session.md  evaluation_results_v2.md  methodology.md  research_roadmap.md  risks.md
scripts/: cloudflared-config.example.yml  healthcheck.sh  ktp-demo.service  synthesise_lidar.py  synthesise_lv.py  ttpla_to_masks.py
tests/: test_catenary.py  test_fusion.py  test_graph_complete.py  test_lidar_features.py  test_postprocess.py  test_segment_router.py  test_ttpla_converter.py
training/: COLAB.md  canonical.py  evaluate.py  train.py
