[project]
name = "ktp-conductor-demo"
version = "0.1.0"
description = "Aerial conductor segmentation, vectorisation, hidden-cable inference, and LiDAR classification — research prototype"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
dependencies = [
    # Web stack
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "slowapi>=0.1.9",
    "prometheus-fastapi-instrumentator>=7.0",
    "structlog>=24.4",
    # ML / CV — PyTorch capped before 2.9: starting torch 2.8 PyPI wheels
    # dropped Pascal (sm_61) support, which the demo laptop's GTX 1050 Ti
    # needs. The cu126 index below is the last PyTorch CUDA build that
    # still ships sm_61 kernels. See pytorch/pytorch#157517, #160575.
    "torch>=2.4,<2.9",
    "torchvision>=0.19,<0.24",
    "segmentation-models-pytorch>=0.3.4",
    "albumentations>=1.4",
    "opencv-python-headless>=4.10",
    "scikit-image>=0.24",
    "pillow>=10.4",
    "numpy>=1.26,<2.1",
    "scipy>=1.14",
    # Geo
    "shapely>=2.0",
    "networkx>=3.3",
    "rasterio>=1.3",
    "geopandas>=1.0",
    # LiDAR
    "laspy>=2.5",
    "lazrs>=0.6",
    # Utilities
    "tqdm>=4.66",
    "loguru>=0.7",
    "rich>=13.8",
]

[project.urls]
Repository = "https://github.com/s1ddh-rth/ktp-conductor-demo"
Issues = "https://github.com/s1ddh-rth/ktp-conductor-demo/issues"

[project.optional-dependencies]
training = [
    "pytorch-lightning>=2.4",
    "torchmetrics>=1.4",
    "wandb>=0.18",
    "kaggle>=1.6",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "ipython>=8.27",
    "jupyter>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# Pin PyTorch to the cu126 wheel index. PyPI's default torch wheels
# transitioned to CUDA 13 starting 2.11 (dev-discuss "Transitioning
# PyPI CUDA wheels to CUDA 13.0"), which drops Pascal support. The
# cu126 build is the last PyTorch CUDA version still shipping sm_61
# kernels for the GTX 1050 Ti.
[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
